examples/org.codingpark.piraterobot.play.web/src-js/org/codingpark/piraterobot/play/web/parser/PlayParser.js
// $ANTLR 3.3 avr. 19, 2016 01:13:22 D:\\git\\dslforge\\examples\\org.codingpark.piraterobot.play.web\\src-js\\org\\codingpark\\piraterobot\\play\\web\\parser\\Play.g 2016-11-20 20:00:45



var PlayParser = function(input, state) {
    if (!state) {
        state = new org.antlr.runtime.RecognizerSharedState();
    }

    (function(){
    }).call(this);

    PlayParser.superclass.constructor.call(this, input, state);


         

    /* @todo only create adaptor if output=AST */
    this.adaptor = new org.antlr.runtime.tree.CommonTreeAdaptor();

};

org.antlr.lang.augmentObject(PlayParser, {
    EOF: -1,
    T__9: 9,
    T__10: 10,
    T__11: 11,
    T__12: 12,
    T__13: 13,
    T__14: 14,
    T__15: 15,
    T__16: 16,
    T__17: 17,
    T__18: 18,
    T__19: 19,
    T__20: 20,
    T__21: 21,
    ID: 4,
    INT: 5,
    STRING: 6,
    COMMENT: 7,
    WS: 8
});

(function(){
// public class variables
var EOF= -1,
    T__9= 9,
    T__10= 10,
    T__11= 11,
    T__12= 12,
    T__13= 13,
    T__14= 14,
    T__15= 15,
    T__16= 16,
    T__17= 17,
    T__18= 18,
    T__19= 19,
    T__20= 20,
    T__21= 21,
    ID= 4,
    INT= 5,
    STRING= 6,
    COMMENT= 7,
    WS= 8;

// public instance methods/vars
org.antlr.lang.extend(PlayParser, org.antlr.runtime.Parser, {
        
    setTreeAdaptor: function(adaptor) {
        this.adaptor = adaptor;
    },
    getTreeAdaptor: function() {
        return this.adaptor;
    },

    getTokenNames: function() { return PlayParser.tokenNames; },
    getGrammarFileName: function() { return "D:\\git\\dslforge\\examples\\org.codingpark.piraterobot.play.web\\src-js\\org\\codingpark\\piraterobot\\play\\web\\parser\\Play.g"; }
});
org.antlr.lang.augmentObject(PlayParser.prototype, {

    // inline static return class
    rule_PlayModel_return: (function() {
        PlayParser.rule_PlayModel_return = function(){};
        org.antlr.lang.extend(PlayParser.rule_PlayModel_return,
                          org.antlr.runtime.ParserRuleReturnScope,
        {
            getTree: function() { return this.tree; }
        });
        return;
    })(),

    // D:\\git\\dslforge\\examples\\org.codingpark.piraterobot.play.web\\src-js\\org\\codingpark\\piraterobot\\play\\web\\parser\\Play.g:21:1: rule_PlayModel : procedures+= rule_Procedure EOF ;
    // $ANTLR start "rule_PlayModel"
    rule_PlayModel: function() {
        var retval = new PlayParser.rule_PlayModel_return();
        retval.start = this.input.LT(1);

        var root_0 = null;

        var EOF1 = null;
        var list_procedures=null;
        var procedures = null;
        var EOF1_tree=null;

        try {
            // D:\\git\\dslforge\\examples\\org.codingpark.piraterobot.play.web\\src-js\\org\\codingpark\\piraterobot\\play\\web\\parser\\Play.g:21:15: (procedures+= rule_Procedure EOF )
            // D:\\git\\dslforge\\examples\\org.codingpark.piraterobot.play.web\\src-js\\org\\codingpark\\piraterobot\\play\\web\\parser\\Play.g:23:2: procedures+= rule_Procedure EOF
            root_0 = this.adaptor.nil();

            this.pushFollow(PlayParser.FOLLOW_rule_Procedure_in_rule_PlayModel65);
            procedures=this.rule_Procedure();

            this.state._fsp--;

            this.adaptor.addChild(root_0, procedures.getTree());
            if (org.antlr.lang.isNull(list_procedures)) list_procedures = [];
            list_procedures.push(procedures.getTree());

            EOF1=this.match(this.input,EOF,PlayParser.FOLLOW_EOF_in_rule_PlayModel68); 



            retval.stop = this.input.LT(-1);

            retval.tree = this.adaptor.rulePostProcessing(root_0);
            this.adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (re) {
            if (re instanceof org.antlr.runtime.RecognitionException) {
                this.reportError(re);
                this.recover(this.input,re);
                retval.tree = this.adaptor.errorNode(this.input, retval.start, this.input.LT(-1), re);
            } else {
                throw re;
            }
        }
        finally {
        }
        return retval;
    },

    // inline static return class
    rule_Procedure_return: (function() {
        PlayParser.rule_Procedure_return = function(){};
        org.antlr.lang.extend(PlayParser.rule_Procedure_return,
                          org.antlr.runtime.ParserRuleReturnScope,
        {
            getTree: function() { return this.tree; }
        });
        return;
    })(),

    // D:\\git\\dslforge\\examples\\org.codingpark.piraterobot.play.web\\src-js\\org\\codingpark\\piraterobot\\play\\web\\parser\\Play.g:29:1: rule_Procedure : 'procedure' name= ID '(' ')' '{' (actions+= rule_Action )* '}' ;
    // $ANTLR start "rule_Procedure"
    rule_Procedure: function() {
        var retval = new PlayParser.rule_Procedure_return();
        retval.start = this.input.LT(1);

        var root_0 = null;

        var name = null;
        var string_literal2 = null;
        var char_literal3 = null;
        var char_literal4 = null;
        var char_literal5 = null;
        var char_literal6 = null;
        var list_actions=null;
        var actions = null;
        var name_tree=null;
        var string_literal2_tree=null;
        var char_literal3_tree=null;
        var char_literal4_tree=null;
        var char_literal5_tree=null;
        var char_literal6_tree=null;

        try {
            // D:\\git\\dslforge\\examples\\org.codingpark.piraterobot.play.web\\src-js\\org\\codingpark\\piraterobot\\play\\web\\parser\\Play.g:29:15: ( 'procedure' name= ID '(' ')' '{' (actions+= rule_Action )* '}' )
            // D:\\git\\dslforge\\examples\\org.codingpark.piraterobot.play.web\\src-js\\org\\codingpark\\piraterobot\\play\\web\\parser\\Play.g:30:2: 'procedure' name= ID '(' ')' '{' (actions+= rule_Action )* '}'
            root_0 = this.adaptor.nil();

            string_literal2=this.match(this.input,9,PlayParser.FOLLOW_9_in_rule_Procedure80); 
            string_literal2_tree = this.adaptor.create(string_literal2);
            this.adaptor.addChild(root_0, string_literal2_tree);

            name=this.match(this.input,ID,PlayParser.FOLLOW_ID_in_rule_Procedure84); 
            name_tree = this.adaptor.create(name);
            this.adaptor.addChild(root_0, name_tree);

            char_literal3=this.match(this.input,10,PlayParser.FOLLOW_10_in_rule_Procedure86); 
            char_literal3_tree = this.adaptor.create(char_literal3);
            this.adaptor.addChild(root_0, char_literal3_tree);

            char_literal4=this.match(this.input,11,PlayParser.FOLLOW_11_in_rule_Procedure90); 
            char_literal4_tree = this.adaptor.create(char_literal4);
            this.adaptor.addChild(root_0, char_literal4_tree);

            char_literal5=this.match(this.input,12,PlayParser.FOLLOW_12_in_rule_Procedure92); 
            char_literal5_tree = this.adaptor.create(char_literal5);
            this.adaptor.addChild(root_0, char_literal5_tree);

            // D:\\git\\dslforge\\examples\\org.codingpark.piraterobot.play.web\\src-js\\org\\codingpark\\piraterobot\\play\\web\\parser\\Play.g:31:17: (actions+= rule_Action )*
            loop1:
            do {
                var alt1=2;
                var LA1_0 = this.input.LA(1);

                if ( ((LA1_0>=14 && LA1_0<=21)) ) {
                    alt1=1;
                }


                switch (alt1) {
                case 1 :
                    // D:\\git\\dslforge\\examples\\org.codingpark.piraterobot.play.web\\src-js\\org\\codingpark\\piraterobot\\play\\web\\parser\\Play.g:31:17: actions+= rule_Action
                    this.pushFollow(PlayParser.FOLLOW_rule_Action_in_rule_Procedure96);
                    actions=this.rule_Action();

                    this.state._fsp--;

                    this.adaptor.addChild(root_0, actions.getTree());
                    if (org.antlr.lang.isNull(list_actions)) list_actions = [];
                    list_actions.push(actions.getTree());



                    break;

                default :
                    break loop1;
                }
            } while (true);

            char_literal6=this.match(this.input,13,PlayParser.FOLLOW_13_in_rule_Procedure99); 
            char_literal6_tree = this.adaptor.create(char_literal6);
            this.adaptor.addChild(root_0, char_literal6_tree);




            retval.stop = this.input.LT(-1);

            retval.tree = this.adaptor.rulePostProcessing(root_0);
            this.adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (re) {
            if (re instanceof org.antlr.runtime.RecognitionException) {
                this.reportError(re);
                this.recover(this.input,re);
                retval.tree = this.adaptor.errorNode(this.input, retval.start, this.input.LT(-1), re);
            } else {
                throw re;
            }
        }
        finally {
        }
        return retval;
    },

    // inline static return class
    rule_Action_return: (function() {
        PlayParser.rule_Action_return = function(){};
        org.antlr.lang.extend(PlayParser.rule_Action_return,
                          org.antlr.runtime.ParserRuleReturnScope,
        {
            getTree: function() { return this.tree; }
        });
        return;
    })(),

    // D:\\git\\dslforge\\examples\\org.codingpark.piraterobot.play.web\\src-js\\org\\codingpark\\piraterobot\\play\\web\\parser\\Play.g:37:1: rule_Action : ( (isup= 'up' '(' (parametervalue= rule_ParameterValue )? ')' ) | (isright= 'right' '(' (parametervalue= rule_ParameterValue )? ')' ) | (isdown= 'down' '(' (parametervalue= rule_ParameterValue )? ')' ) | (isleft= 'left' '(' (parametervalue= rule_ParameterValue )? ')' ) | (isdig= 'dig' '(' (parametervalue= rule_ParameterValue )? ')' ) | (isjump= 'jump' '(' (parametervalue= rule_ParameterValue )? ')' ) | (isfight= 'fight' '(' (parametervalue= rule_ParameterValue )? ')' ) | (isrepeat= 'repeat' '(' (parametervalue= rule_ParameterValue )? ')' '{' (actions+= rule_Action )* '}' ) );
    // $ANTLR start "rule_Action"
    rule_Action: function() {
        var retval = new PlayParser.rule_Action_return();
        retval.start = this.input.LT(1);

        var root_0 = null;

        var isup = null;
        var isright = null;
        var isdown = null;
        var isleft = null;
        var isdig = null;
        var isjump = null;
        var isfight = null;
        var isrepeat = null;
        var char_literal7 = null;
        var char_literal8 = null;
        var char_literal9 = null;
        var char_literal10 = null;
        var char_literal11 = null;
        var char_literal12 = null;
        var char_literal13 = null;
        var char_literal14 = null;
        var char_literal15 = null;
        var char_literal16 = null;
        var char_literal17 = null;
        var char_literal18 = null;
        var char_literal19 = null;
        var char_literal20 = null;
        var char_literal21 = null;
        var char_literal22 = null;
        var char_literal23 = null;
        var char_literal24 = null;
        var list_actions=null;
         var parametervalue = null;
        var actions = null;
        var isup_tree=null;
        var isright_tree=null;
        var isdown_tree=null;
        var isleft_tree=null;
        var isdig_tree=null;
        var isjump_tree=null;
        var isfight_tree=null;
        var isrepeat_tree=null;
        var char_literal7_tree=null;
        var char_literal8_tree=null;
        var char_literal9_tree=null;
        var char_literal10_tree=null;
        var char_literal11_tree=null;
        var char_literal12_tree=null;
        var char_literal13_tree=null;
        var char_literal14_tree=null;
        var char_literal15_tree=null;
        var char_literal16_tree=null;
        var char_literal17_tree=null;
        var char_literal18_tree=null;
        var char_literal19_tree=null;
        var char_literal20_tree=null;
        var char_literal21_tree=null;
        var char_literal22_tree=null;
        var char_literal23_tree=null;
        var char_literal24_tree=null;

        try {
            // D:\\git\\dslforge\\examples\\org.codingpark.piraterobot.play.web\\src-js\\org\\codingpark\\piraterobot\\play\\web\\parser\\Play.g:37:12: ( (isup= 'up' '(' (parametervalue= rule_ParameterValue )? ')' ) | (isright= 'right' '(' (parametervalue= rule_ParameterValue )? ')' ) | (isdown= 'down' '(' (parametervalue= rule_ParameterValue )? ')' ) | (isleft= 'left' '(' (parametervalue= rule_ParameterValue )? ')' ) | (isdig= 'dig' '(' (parametervalue= rule_ParameterValue )? ')' ) | (isjump= 'jump' '(' (parametervalue= rule_ParameterValue )? ')' ) | (isfight= 'fight' '(' (parametervalue= rule_ParameterValue )? ')' ) | (isrepeat= 'repeat' '(' (parametervalue= rule_ParameterValue )? ')' '{' (actions+= rule_Action )* '}' ) )
            var alt11=8;
            switch ( this.input.LA(1) ) {
            case 14:
                alt11=1;
                break;
            case 15:
                alt11=2;
                break;
            case 16:
                alt11=3;
                break;
            case 17:
                alt11=4;
                break;
            case 18:
                alt11=5;
                break;
            case 19:
                alt11=6;
                break;
            case 20:
                alt11=7;
                break;
            case 21:
                alt11=8;
                break;
            default:
                var nvae =
                    new org.antlr.runtime.NoViableAltException("", 11, 0, this.input);

                throw nvae;
            }

            switch (alt11) {
                case 1 :
                    // D:\\git\\dslforge\\examples\\org.codingpark.piraterobot.play.web\\src-js\\org\\codingpark\\piraterobot\\play\\web\\parser\\Play.g:39:2: (isup= 'up' '(' (parametervalue= rule_ParameterValue )? ')' )
                    root_0 = this.adaptor.nil();

                    // D:\\git\\dslforge\\examples\\org.codingpark.piraterobot.play.web\\src-js\\org\\codingpark\\piraterobot\\play\\web\\parser\\Play.g:39:2: (isup= 'up' '(' (parametervalue= rule_ParameterValue )? ')' )
                    // D:\\git\\dslforge\\examples\\org.codingpark.piraterobot.play.web\\src-js\\org\\codingpark\\piraterobot\\play\\web\\parser\\Play.g:39:3: isup= 'up' '(' (parametervalue= rule_ParameterValue )? ')'
                    isup=this.match(this.input,14,PlayParser.FOLLOW_14_in_rule_Action118); 
                    isup_tree = this.adaptor.create(isup);
                    this.adaptor.addChild(root_0, isup_tree);

                    char_literal7=this.match(this.input,10,PlayParser.FOLLOW_10_in_rule_Action120); 
                    char_literal7_tree = this.adaptor.create(char_literal7);
                    this.adaptor.addChild(root_0, char_literal7_tree);

                    // D:\\git\\dslforge\\examples\\org.codingpark.piraterobot.play.web\\src-js\\org\\codingpark\\piraterobot\\play\\web\\parser\\Play.g:39:17: (parametervalue= rule_ParameterValue )?
                    var alt2=2;
                    var LA2_0 = this.input.LA(1);

                    if ( (LA2_0==INT) ) {
                        alt2=1;
                    }
                    switch (alt2) {
                        case 1 :
                            // D:\\git\\dslforge\\examples\\org.codingpark.piraterobot.play.web\\src-js\\org\\codingpark\\piraterobot\\play\\web\\parser\\Play.g:39:18: parametervalue= rule_ParameterValue
                            this.pushFollow(PlayParser.FOLLOW_rule_ParameterValue_in_rule_Action127);
                            parametervalue=this.rule_ParameterValue();

                            this.state._fsp--;

                            this.adaptor.addChild(root_0, parametervalue.getTree());


                            break;

                    }

                    char_literal8=this.match(this.input,11,PlayParser.FOLLOW_11_in_rule_Action131); 
                    char_literal8_tree = this.adaptor.create(char_literal8);
                    this.adaptor.addChild(root_0, char_literal8_tree);






                    break;
                case 2 :
                    // D:\\git\\dslforge\\examples\\org.codingpark.piraterobot.play.web\\src-js\\org\\codingpark\\piraterobot\\play\\web\\parser\\Play.g:40:2: (isright= 'right' '(' (parametervalue= rule_ParameterValue )? ')' )
                    root_0 = this.adaptor.nil();

                    // D:\\git\\dslforge\\examples\\org.codingpark.piraterobot.play.web\\src-js\\org\\codingpark\\piraterobot\\play\\web\\parser\\Play.g:40:2: (isright= 'right' '(' (parametervalue= rule_ParameterValue )? ')' )
                    // D:\\git\\dslforge\\examples\\org.codingpark.piraterobot.play.web\\src-js\\org\\codingpark\\piraterobot\\play\\web\\parser\\Play.g:40:3: isright= 'right' '(' (parametervalue= rule_ParameterValue )? ')'
                    isright=this.match(this.input,15,PlayParser.FOLLOW_15_in_rule_Action140); 
                    isright_tree = this.adaptor.create(isright);
                    this.adaptor.addChild(root_0, isright_tree);

                    char_literal9=this.match(this.input,10,PlayParser.FOLLOW_10_in_rule_Action142); 
                    char_literal9_tree = this.adaptor.create(char_literal9);
                    this.adaptor.addChild(root_0, char_literal9_tree);

                    // D:\\git\\dslforge\\examples\\org.codingpark.piraterobot.play.web\\src-js\\org\\codingpark\\piraterobot\\play\\web\\parser\\Play.g:40:23: (parametervalue= rule_ParameterValue )?
                    var alt3=2;
                    var LA3_0 = this.input.LA(1);

                    if ( (LA3_0==INT) ) {
                        alt3=1;
                    }
                    switch (alt3) {
                        case 1 :
                            // D:\\git\\dslforge\\examples\\org.codingpark.piraterobot.play.web\\src-js\\org\\codingpark\\piraterobot\\play\\web\\parser\\Play.g:40:24: parametervalue= rule_ParameterValue
                            this.pushFollow(PlayParser.FOLLOW_rule_ParameterValue_in_rule_Action149);
                            parametervalue=this.rule_ParameterValue();

                            this.state._fsp--;

                            this.adaptor.addChild(root_0, parametervalue.getTree());


                            break;

                    }

                    char_literal10=this.match(this.input,11,PlayParser.FOLLOW_11_in_rule_Action153); 
                    char_literal10_tree = this.adaptor.create(char_literal10);
                    this.adaptor.addChild(root_0, char_literal10_tree);






                    break;
                case 3 :
                    // D:\\git\\dslforge\\examples\\org.codingpark.piraterobot.play.web\\src-js\\org\\codingpark\\piraterobot\\play\\web\\parser\\Play.g:41:2: (isdown= 'down' '(' (parametervalue= rule_ParameterValue )? ')' )
                    root_0 = this.adaptor.nil();

                    // D:\\git\\dslforge\\examples\\org.codingpark.piraterobot.play.web\\src-js\\org\\codingpark\\piraterobot\\play\\web\\parser\\Play.g:41:2: (isdown= 'down' '(' (parametervalue= rule_ParameterValue )? ')' )
                    // D:\\git\\dslforge\\examples\\org.codingpark.piraterobot.play.web\\src-js\\org\\codingpark\\piraterobot\\play\\web\\parser\\Play.g:41:3: isdown= 'down' '(' (parametervalue= rule_ParameterValue )? ')'
                    isdown=this.match(this.input,16,PlayParser.FOLLOW_16_in_rule_Action162); 
                    isdown_tree = this.adaptor.create(isdown);
                    this.adaptor.addChild(root_0, isdown_tree);

                    char_literal11=this.match(this.input,10,PlayParser.FOLLOW_10_in_rule_Action164); 
                    char_literal11_tree = this.adaptor.create(char_literal11);
                    this.adaptor.addChild(root_0, char_literal11_tree);

                    // D:\\git\\dslforge\\examples\\org.codingpark.piraterobot.play.web\\src-js\\org\\codingpark\\piraterobot\\play\\web\\parser\\Play.g:41:21: (parametervalue= rule_ParameterValue )?
                    var alt4=2;
                    var LA4_0 = this.input.LA(1);

                    if ( (LA4_0==INT) ) {
                        alt4=1;
                    }
                    switch (alt4) {
                        case 1 :
                            // D:\\git\\dslforge\\examples\\org.codingpark.piraterobot.play.web\\src-js\\org\\codingpark\\piraterobot\\play\\web\\parser\\Play.g:41:22: parametervalue= rule_ParameterValue
                            this.pushFollow(PlayParser.FOLLOW_rule_ParameterValue_in_rule_Action171);
                            parametervalue=this.rule_ParameterValue();

                            this.state._fsp--;

                            this.adaptor.addChild(root_0, parametervalue.getTree());


                            break;

                    }

                    char_literal12=this.match(this.input,11,PlayParser.FOLLOW_11_in_rule_Action175); 
                    char_literal12_tree = this.adaptor.create(char_literal12);
                    this.adaptor.addChild(root_0, char_literal12_tree);






                    break;
                case 4 :
                    // D:\\git\\dslforge\\examples\\org.codingpark.piraterobot.play.web\\src-js\\org\\codingpark\\piraterobot\\play\\web\\parser\\Play.g:42:2: (isleft= 'left' '(' (parametervalue= rule_ParameterValue )? ')' )
                    root_0 = this.adaptor.nil();

                    // D:\\git\\dslforge\\examples\\org.codingpark.piraterobot.play.web\\src-js\\org\\codingpark\\piraterobot\\play\\web\\parser\\Play.g:42:2: (isleft= 'left' '(' (parametervalue= rule_ParameterValue )? ')' )
                    // D:\\git\\dslforge\\examples\\org.codingpark.piraterobot.play.web\\src-js\\org\\codingpark\\piraterobot\\play\\web\\parser\\Play.g:42:3: isleft= 'left' '(' (parametervalue= rule_ParameterValue )? ')'
                    isleft=this.match(this.input,17,PlayParser.FOLLOW_17_in_rule_Action184); 
                    isleft_tree = this.adaptor.create(isleft);
                    this.adaptor.addChild(root_0, isleft_tree);

                    char_literal13=this.match(this.input,10,PlayParser.FOLLOW_10_in_rule_Action186); 
                    char_literal13_tree = this.adaptor.create(char_literal13);
                    this.adaptor.addChild(root_0, char_literal13_tree);

                    // D:\\git\\dslforge\\examples\\org.codingpark.piraterobot.play.web\\src-js\\org\\codingpark\\piraterobot\\play\\web\\parser\\Play.g:42:21: (parametervalue= rule_ParameterValue )?
                    var alt5=2;
                    var LA5_0 = this.input.LA(1);

                    if ( (LA5_0==INT) ) {
                        alt5=1;
                    }
                    switch (alt5) {
                        case 1 :
                            // D:\\git\\dslforge\\examples\\org.codingpark.piraterobot.play.web\\src-js\\org\\codingpark\\piraterobot\\play\\web\\parser\\Play.g:42:22: parametervalue= rule_ParameterValue
                            this.pushFollow(PlayParser.FOLLOW_rule_ParameterValue_in_rule_Action193);
                            parametervalue=this.rule_ParameterValue();

                            this.state._fsp--;

                            this.adaptor.addChild(root_0, parametervalue.getTree());


                            break;

                    }

                    char_literal14=this.match(this.input,11,PlayParser.FOLLOW_11_in_rule_Action197); 
                    char_literal14_tree = this.adaptor.create(char_literal14);
                    this.adaptor.addChild(root_0, char_literal14_tree);






                    break;
                case 5 :
                    // D:\\git\\dslforge\\examples\\org.codingpark.piraterobot.play.web\\src-js\\org\\codingpark\\piraterobot\\play\\web\\parser\\Play.g:43:2: (isdig= 'dig' '(' (parametervalue= rule_ParameterValue )? ')' )
                    root_0 = this.adaptor.nil();

                    // D:\\git\\dslforge\\examples\\org.codingpark.piraterobot.play.web\\src-js\\org\\codingpark\\piraterobot\\play\\web\\parser\\Play.g:43:2: (isdig= 'dig' '(' (parametervalue= rule_ParameterValue )? ')' )
                    // D:\\git\\dslforge\\examples\\org.codingpark.piraterobot.play.web\\src-js\\org\\codingpark\\piraterobot\\play\\web\\parser\\Play.g:43:3: isdig= 'dig' '(' (parametervalue= rule_ParameterValue )? ')'
                    isdig=this.match(this.input,18,PlayParser.FOLLOW_18_in_rule_Action206); 
                    isdig_tree = this.adaptor.create(isdig);
                    this.adaptor.addChild(root_0, isdig_tree);

                    char_literal15=this.match(this.input,10,PlayParser.FOLLOW_10_in_rule_Action208); 
                    char_literal15_tree = this.adaptor.create(char_literal15);
                    this.adaptor.addChild(root_0, char_literal15_tree);

                    // D:\\git\\dslforge\\examples\\org.codingpark.piraterobot.play.web\\src-js\\org\\codingpark\\piraterobot\\play\\web\\parser\\Play.g:43:19: (parametervalue= rule_ParameterValue )?
                    var alt6=2;
                    var LA6_0 = this.input.LA(1);

                    if ( (LA6_0==INT) ) {
                        alt6=1;
                    }
                    switch (alt6) {
                        case 1 :
                            // D:\\git\\dslforge\\examples\\org.codingpark.piraterobot.play.web\\src-js\\org\\codingpark\\piraterobot\\play\\web\\parser\\Play.g:43:20: parametervalue= rule_ParameterValue
                            this.pushFollow(PlayParser.FOLLOW_rule_ParameterValue_in_rule_Action215);
                            parametervalue=this.rule_ParameterValue();

                            this.state._fsp--;

                            this.adaptor.addChild(root_0, parametervalue.getTree());


                            break;

                    }

                    char_literal16=this.match(this.input,11,PlayParser.FOLLOW_11_in_rule_Action219); 
                    char_literal16_tree = this.adaptor.create(char_literal16);
                    this.adaptor.addChild(root_0, char_literal16_tree);






                    break;
                case 6 :
                    // D:\\git\\dslforge\\examples\\org.codingpark.piraterobot.play.web\\src-js\\org\\codingpark\\piraterobot\\play\\web\\parser\\Play.g:44:2: (isjump= 'jump' '(' (parametervalue= rule_ParameterValue )? ')' )
                    root_0 = this.adaptor.nil();

                    // D:\\git\\dslforge\\examples\\org.codingpark.piraterobot.play.web\\src-js\\org\\codingpark\\piraterobot\\play\\web\\parser\\Play.g:44:2: (isjump= 'jump' '(' (parametervalue= rule_ParameterValue )? ')' )
                    // D:\\git\\dslforge\\examples\\org.codingpark.piraterobot.play.web\\src-js\\org\\codingpark\\piraterobot\\play\\web\\parser\\Play.g:44:3: isjump= 'jump' '(' (parametervalue= rule_ParameterValue )? ')'
                    isjump=this.match(this.input,19,PlayParser.FOLLOW_19_in_rule_Action228); 
                    isjump_tree = this.adaptor.create(isjump);
                    this.adaptor.addChild(root_0, isjump_tree);

                    char_literal17=this.match(this.input,10,PlayParser.FOLLOW_10_in_rule_Action230); 
                    char_literal17_tree = this.adaptor.create(char_literal17);
                    this.adaptor.addChild(root_0, char_literal17_tree);

                    // D:\\git\\dslforge\\examples\\org.codingpark.piraterobot.play.web\\src-js\\org\\codingpark\\piraterobot\\play\\web\\parser\\Play.g:44:21: (parametervalue= rule_ParameterValue )?
                    var alt7=2;
                    var LA7_0 = this.input.LA(1);

                    if ( (LA7_0==INT) ) {
                        alt7=1;
                    }
                    switch (alt7) {
                        case 1 :
                            // D:\\git\\dslforge\\examples\\org.codingpark.piraterobot.play.web\\src-js\\org\\codingpark\\piraterobot\\play\\web\\parser\\Play.g:44:22: parametervalue= rule_ParameterValue
                            this.pushFollow(PlayParser.FOLLOW_rule_ParameterValue_in_rule_Action237);
                            parametervalue=this.rule_ParameterValue();

                            this.state._fsp--;

                            this.adaptor.addChild(root_0, parametervalue.getTree());


                            break;

                    }

                    char_literal18=this.match(this.input,11,PlayParser.FOLLOW_11_in_rule_Action241); 
                    char_literal18_tree = this.adaptor.create(char_literal18);
                    this.adaptor.addChild(root_0, char_literal18_tree);






                    break;
                case 7 :
                    // D:\\git\\dslforge\\examples\\org.codingpark.piraterobot.play.web\\src-js\\org\\codingpark\\piraterobot\\play\\web\\parser\\Play.g:45:2: (isfight= 'fight' '(' (parametervalue= rule_ParameterValue )? ')' )
                    root_0 = this.adaptor.nil();

                    // D:\\git\\dslforge\\examples\\org.codingpark.piraterobot.play.web\\src-js\\org\\codingpark\\piraterobot\\play\\web\\parser\\Play.g:45:2: (isfight= 'fight' '(' (parametervalue= rule_ParameterValue )? ')' )
                    // D:\\git\\dslforge\\examples\\org.codingpark.piraterobot.play.web\\src-js\\org\\codingpark\\piraterobot\\play\\web\\parser\\Play.g:45:3: isfight= 'fight' '(' (parametervalue= rule_ParameterValue )? ')'
                    isfight=this.match(this.input,20,PlayParser.FOLLOW_20_in_rule_Action250); 
                    isfight_tree = this.adaptor.create(isfight);
                    this.adaptor.addChild(root_0, isfight_tree);

                    char_literal19=this.match(this.input,10,PlayParser.FOLLOW_10_in_rule_Action252); 
                    char_literal19_tree = this.adaptor.create(char_literal19);
                    this.adaptor.addChild(root_0, char_literal19_tree);

                    // D:\\git\\dslforge\\examples\\org.codingpark.piraterobot.play.web\\src-js\\org\\codingpark\\piraterobot\\play\\web\\parser\\Play.g:45:23: (parametervalue= rule_ParameterValue )?
                    var alt8=2;
                    var LA8_0 = this.input.LA(1);

                    if ( (LA8_0==INT) ) {
                        alt8=1;
                    }
                    switch (alt8) {
                        case 1 :
                            // D:\\git\\dslforge\\examples\\org.codingpark.piraterobot.play.web\\src-js\\org\\codingpark\\piraterobot\\play\\web\\parser\\Play.g:45:24: parametervalue= rule_ParameterValue
                            this.pushFollow(PlayParser.FOLLOW_rule_ParameterValue_in_rule_Action259);
                            parametervalue=this.rule_ParameterValue();

                            this.state._fsp--;

                            this.adaptor.addChild(root_0, parametervalue.getTree());


                            break;

                    }

                    char_literal20=this.match(this.input,11,PlayParser.FOLLOW_11_in_rule_Action263); 
                    char_literal20_tree = this.adaptor.create(char_literal20);
                    this.adaptor.addChild(root_0, char_literal20_tree);






                    break;
                case 8 :
                    // D:\\git\\dslforge\\examples\\org.codingpark.piraterobot.play.web\\src-js\\org\\codingpark\\piraterobot\\play\\web\\parser\\Play.g:46:2: (isrepeat= 'repeat' '(' (parametervalue= rule_ParameterValue )? ')' '{' (actions+= rule_Action )* '}' )
                    root_0 = this.adaptor.nil();

                    // D:\\git\\dslforge\\examples\\org.codingpark.piraterobot.play.web\\src-js\\org\\codingpark\\piraterobot\\play\\web\\parser\\Play.g:46:2: (isrepeat= 'repeat' '(' (parametervalue= rule_ParameterValue )? ')' '{' (actions+= rule_Action )* '}' )
                    // D:\\git\\dslforge\\examples\\org.codingpark.piraterobot.play.web\\src-js\\org\\codingpark\\piraterobot\\play\\web\\parser\\Play.g:46:3: isrepeat= 'repeat' '(' (parametervalue= rule_ParameterValue )? ')' '{' (actions+= rule_Action )* '}'
